# nixtamal

./: .boring  .editorconfig  .ignore  .topiary.ncl  AGENTS.md  LICENSE.txt  README.asciidoc  README.rst  default.nix  dune  dune-project  dune-workspace  flake.nix  nixtamal.opam  release.nix  shell.nix
doc/: dune  manifest.rst
lib/: banner.ml  dune  editor.ml  error.ml  input.ml  input_foreman.ml  kDL.ml  kDL_lens_result.ml  kdl_lens_result.ml  lock_loader.ml  lockfile.ml  manifest.ml  name.ml  nixtamal.ml  prefetch.ml  uRI.ml  uTF8.ml  util.ml  working_directory.ml
license/: ISC.txt  dune
llm/: 2026-01-07-Session-Changes-Summary.md  2026-02-07-attribution-audit.md  2026-02-07-phase1-flake-integration.md  README.md
nix/: dune
nix/check/: editorconfig.nix  nixfmt.nix
nix/overlay/: check.nix  default.nix  development.nix
nix/package/: dev-shell.nix  mark-darcs-weak-hash.nix  nixfmt-3-space.nix  nixtamal.nix  ocamlformat-rpc-bin.nix
nix/tamal/: .editorconfig  default.nix  lock.json  manifest.kdl
nix/tamal/darcs_context/: dash-nix.txt
script/: mk-darcs-weak-hash
test/: dune  test_input.ml  test_main.ml  test_nixtamal.ml  test_source.ml
