(library
 (public_name nixtamal)
 (name nixtamal)
 (libraries
  camomile
  eio
  eio_main
  jingoo
  jsont
  jsont.bytesrw
  kdl
  logs
  saturn
  uri)
 (preprocess
  (pps
   ppx_deriving.enum
   ppx_deriving.eq
   ppx_deriving.ord
   ppx_deriving.make
   ppx_deriving.show
   ppx_deriving_qcheck)))
